# research-assistant

./: .env.sample  AGENTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: bitbucket_sync.yml  codeql.yml  gitlab_sync.yml  lint.yml  release.yml  slack.yml
.gitlab/issue_templates/: bug_report.md
controllers/: research_controller.py
models/: pdf_generator.py
services/: agents_service.py
utils/: markdown_cleaner.py
