[project]
name = "research-assistant"
version = "0.1.0"
description = "AI powered research assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.7",
    "dotenv>=0.9.9",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "openai>=2.41.1",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
lint = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.17",
]
