[project]
name = "research-assistant"
version = "0.1.0"
description = "AI powered research assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.15.2",
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "openai>=2.45.0",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
lint = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
